external-crates/move/crates/move-compiler/tests/move_2024/matching/todd_test_1.exp
error[E07003]: invalid operation, could create dangling a reference
   ┌─ tests/move_2024/matching/todd_test_1.move:17:20
   │
15 │         match (o) {
   │                - It is still being mutably borrowed by this reference
16 │             E::A(u)  => *u,
17 │             _ if ({*o = E::A(0); false}) => 1,
   │                    ^^^^^^^^^^^^ Invalid mutation of reference.

